--- a/Card Hover Effect/index.html
+++ b/Card Hover Effect/index.html
@@ -5,10 +5,55 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet"> <link rel="stylesheet" href="css/style.css">
-        
+        <link rel="stylesheet" href="CSS/style.css">
         <title>Card Hover Effect</title>
     </head>
     <body>
+        <div class="container">
+            <div class="card">
+                <div class="face face1">
+                    <div class="content">
+                        <img src="./images/design.png" alt="">
+                        <h3>Design</h3>
+                    </div>
+                </div>
+                <div class="face face2">
+                    <div class="content">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos repellendus, porro iste aut autem doloremque rerum? Reprehenderit ipsum ex error facilis nesciunt suscipit, sequi eum nam fugit iste assumenda nulla?</p>
+                        <a href="#">Read More</a>
+                    </div>
+                </div>
+            </div>
 
+            <div class="card">
+                <div class="face face1">
+                    <div class="content">
+                        <img src="./images/code.jpg" alt="">
+                        <h3>Code</h3>
+                    </div>
+                </div>
+                <div class="face face2">
+                    <div class="content">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos repellendus, porro iste aut autem doloremque rerum? Reprehenderit ipsum ex error facilis nesciunt suscipit, sequi eum nam fugit iste assumenda nulla?</p>
+                        <a href="#">Read More</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="face face1">
+                    <div class="content">
+                        <img src="./images/launch.jpg" alt="">
+                        <h3>Launch</h3>
+                    </div>
+                </div>
+                <div class="face face2">
+                    <div class="content">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos repellendus, porro iste aut autem doloremque rerum? Reprehenderit ipsum ex error facilis nesciunt suscipit, sequi eum nam fugit iste assumenda nulla?</p>
+                        <a href="#">Read More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
