--- a/Card Hover Effect -II/index.html
+++ b/Card Hover Effect -II/index.html
@@ -13,7 +13,7 @@
             <div class="cards">
                 <div class="imgBx">
                     <div>
-                        <img src="./images/design.png" alt="">
+                        <img src="./images/design.svg" alt="">
                         <h2>Design</h2>
                     </div>
                     
@@ -27,7 +27,7 @@
             <div class="cards">
                 <div class="imgBx">
                     <div>
-                        <img src="./images/code.jpg" alt="">
+                        <img src="./images/code.svg" alt="">
                         <h2>Code</h2>
                     </div>
                 </div>
@@ -40,7 +40,7 @@
             <div class="cards">
                 <div class="imgBx">
                     <div>
-                        <img src="./images/launch.jpg" alt="">
+                        <img src="./images/launch.svg" alt="">
                         <h2>Launch</h2>
                     </div>
                 </div>
