--- a/Card Hover Effect/index.html
+++ b/Card Hover Effect/index.html
@@ -13,7 +13,7 @@
             <div class="card">
                 <div class="face face1">
                     <div class="content">
-                        <img src="./images/design.png" alt="">
+                        <img src="./images/design.svg" alt="">
                         <h3>Design</h3>
                     </div>
                 </div>
@@ -28,7 +28,7 @@
             <div class="card">
                 <div class="face face1">
                     <div class="content">
-                        <img src="./images/code.jpg" alt="">
+                        <img src="./images/code.svg" alt="">
                         <h3>Code</h3>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
             <div class="card">
                 <div class="face face1">
                     <div class="content">
-                        <img src="./images/launch.jpg" alt="">
+                        <img src="./images/launch.svg" alt="">
                         <h3>Launch</h3>
                     </div>
                 </div>
