--- a/Neumorphism Card UI/index.html
+++ b/Neumorphism Card UI/index.html
@@ -12,7 +12,7 @@
        <div class="container">
             <div class="card">
                 <div class="imgBx">
-                    <img src="./images/design.png" alt="">
+                    <img src="./images/design.svg" alt="">
                 </div>
                 <div class="contentBx">
                     <h2>Designs</h2>
@@ -22,7 +22,7 @@
             </div>
             <div class="card">
                 <div class="imgBx">
-                    <img src="./images/code.jpg" alt="">
+                    <img src="./images/code.svg" alt="">
                 </div>
                 <div class="contentBx">
                     <h2>Code</h2>
@@ -32,7 +32,7 @@
             </div>
             <div class="card">
                 <div class="imgBx">
-                    <img src="./images/launch.jpg" alt="">
+                    <img src="./images/launch.svg" alt="">
                 </div>
                 <div class="contentBx">
                     <h2>Launch</h2>
