updated merry christmas

--- a/Merry Christmas/index.html
+++ b/Merry Christmas/index.html
@@ -32,7 +32,7 @@
                     bubbles.style.height = 1+size+'px';
 
                     bubbles.style.animationDuration = 5+size+'s';
-                    bubbles.style.animationDelay = 5+size+'s';
+                    bubbles.style.animationDelay = size+'s';
 
                     section.appendChild(bubbles);
                     i++;
