--- a/index.html
+++ b/index.html
@@ -6,12 +6,61 @@
         
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
 		
-        
+        <style>
+            h2{
+                text-align: center;
+            }
+            ul{
+                list-style-type: none;
+                margin:20px 10px;
+                padding: 0px;
+            }
+
+            li{
+                background:#fff;
+                font-size:20px;
+                text-decoration: none;
+                color:#000;
+                box-shadow: 5px 10px 30px rgba(0, 0, 0, 0.3);
+                padding:20px;
+                border:1px solid #586e4a1f;
+                margin-bottom: 1%;
+            }
+            a{
+                text-decoration: none;
+                color:#000;
+            }
+            a:active{
+                color:#000;
+            }
+        </style>
         <title>Index</title>
     </head>
     <body>
        <div class="container">
-			Test
+           <h2>HTML Snippets</h2>
+           <ul >
+                <li><a href="./Calculator Glass Efffect/index.html">1. Glass Calculator</a></li>
+                <li><a href="./Card - Gradiend Border/index.html">2. Card Gradient Border</a></li>
+                <li><a href="./Card Glass Effect/index.html">3. Card Glass Effect</a></li>
+                <li><a href="./Card Hover Effect/index.html">4. Card Hover Effect</a></li>
+                <li><a href="./Card Hover Effect -II/index.html">5. Card Hover Effect</a></li>
+                <li><a href="./Card Hover Effect III/index.html">6. Card Hover Effect</a></li>
+                <li><a href="./Card Hover Effect IV/index.html">7. Card Hover Effect</a></li>
+                <li><a href="./Card Hover Effect V/index.html">8. Card Hover Effect</a></li>
+                <li><a href="./Card Hover Effect V/index.html">9. Card Hover Effect</a></li>
+                <li><a href="./Card Hover Effect - VI/index.html">10. Card Hover Effect</a></li>
+                <li><a href="./Card Layout/index.html">11. Card Layouts</a></li>
+                <li><a href="./Clip-path/index.html">12. Clip Path</a></li>
+                <li><a href="./Glowing Effect/index.html">13. Glow Icon</a></li>
+                <li><a href="./Hover Effect/index.html">14. Hover Effect</a></li>
+                <li><a href="./Indian Flag/index.html">15. Indian Flag</a></li>
+                <li><a href="./Merry Christmas/index.html">16. Merry Christmas</a></li>
+                <li><a href="./Neumorphism Card UI/index.html">17. Card UI</a></li>
+                <li><a href="./Parallex/index.html">18. Parallax</a></li>
+                <li><a href="./Testimonial/index.html">19. Testimonials</a></li>
+           </ul>
+
 	   </div>
     </body>
 </html>
